# expfactory-deploy

./: CONTRIBUTING.md  README.rst
config/settings/: production.py
docs/: configuration.rst  experiments.rst  howto.rst  introduction.rst  prolific.rst
docs/superpowers/specs/: 2026-04-23-fork-sync-contributing-and-typo-fix-design.md
expfactory_deploy/experiments/: views.py
expfactory_deploy/prolific/: models.py  outgoing_api.py  views.py
expfactory_deploy/templates/: base.html  subject_facing_base.html
expfactory_deploy/templates/experiments/: battery_detail.html  battery_form.html
expfactory_deploy/templates/prolific/: collection_progress_by_experiment_submissions.html  study_collection_subject_detail.html
expfactory_deploy_local/: pyproject.toml
expfactory_deploy_local/src/expfactory_deploy_local/: cli.py  events.py  preprocess.py  serve.py  utils.py
expfactory_deploy_local/src/expfactory_deploy_local/static/jspsych7/poldrack-plugins/: common.js  fmri_utils.js
expfactory_deploy_local/src/expfactory_deploy_local/templates/: deploy_template.html
expfactory_deploy_local/src/expfactory_deploy_local/test_data/: axCPT_24-11-25-21_58.json  axCPT_24-11-25-21_58.tsv
