[project]
name = "expfactory-deploy-local"
version = "0.1.0"
description = ""
authors = [{name = "Ross Blair", email="rosswilsonblair@gmail.com"}, {name = "Logan Bennett", email="logben@stanford.edu"}]
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.9"
dependencies = ["web.py >= 0.62", "Jinja2 >= 3.1.2", "pandas"]

[project.scripts]
expfactory_deploy_local = 'expfactory_deploy_local.cli:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src/*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/expfactory_deploy_local"]
